// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unit tests for Tile component should render the tile with the correct value when value is "O" 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {
        "transform": [
          {
            "translateX": 0,
          },
        ],
      },
    }
  }
  jestInlineStyle={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#e0e0e0",
        "borderRadius": 10,
        "height": "100%",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "30%",
      },
      {
        "backgroundColor": "#0a7ea4",
      },
    ]
  }
  nativeID="2"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#e0e0e0",
        "borderRadius": 10,
        "height": "100%",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "30%",
      },
      {
        "backgroundColor": "#0a7ea4",
      },
      {
        "transform": [
          {
            "translateX": 0,
          },
        ],
      },
    ]
  }
>
  <Text
    accessibilityLabel="This is a tile on column 3 and row 3. It is labeled O."
    accessible={true}
    style={
      [
        {
          "color": "#11181C",
        },
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        {
          "color": "#ffffff",
          "fontSize": 32,
          "fontWeight": "bold",
          "lineHeight": 32,
        },
      ]
    }
  >
    O
  </Text>
</View>
`;

exports[`unit tests for Tile component should render the tile with the correct value when value is "X" 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {
        "transform": [
          {
            "translateX": 0,
          },
        ],
      },
    }
  }
  jestInlineStyle={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#e0e0e0",
        "borderRadius": 10,
        "height": "100%",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "30%",
      },
      {
        "backgroundColor": "#0a7ea4",
      },
    ]
  }
  nativeID="1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#e0e0e0",
        "borderRadius": 10,
        "height": "100%",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "30%",
      },
      {
        "backgroundColor": "#0a7ea4",
      },
      {
        "transform": [
          {
            "translateX": 0,
          },
        ],
      },
    ]
  }
>
  <Text
    accessibilityLabel="This is a tile on column 2 and row 2. It is labeled X."
    accessible={true}
    style={
      [
        {
          "color": "#11181C",
        },
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        {
          "color": "#ffffff",
          "fontSize": 32,
          "fontWeight": "bold",
          "lineHeight": 32,
        },
      ]
    }
  >
    X
  </Text>
</View>
`;

exports[`unit tests for Tile component should render the tile with the correct value when value is null 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {
        "transform": [
          {
            "translateX": 0,
          },
        ],
      },
    }
  }
  jestInlineStyle={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#e0e0e0",
        "borderRadius": 10,
        "height": "100%",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "30%",
      },
      {
        "backgroundColor": "#e0e0e0",
      },
    ]
  }
  nativeID="0"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#e0e0e0",
        "borderRadius": 10,
        "height": "100%",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "30%",
      },
      {
        "backgroundColor": "#e0e0e0",
      },
      {
        "transform": [
          {
            "translateX": 0,
          },
        ],
      },
    ]
  }
>
  <Text
    accessibilityLabel="This is a tile on column 1 and row 1. It is labeled empty."
    accessible={true}
    style={
      [
        {
          "color": "#11181C",
        },
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        {
          "color": "#ffffff",
          "fontSize": 32,
          "fontWeight": "bold",
          "lineHeight": 32,
        },
      ]
    }
  />
</View>
`;

exports[`unit tests for Tile component should render the tile with when value is "X" and victory is true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {
        "transform": [
          {
            "translateX": 0,
          },
        ],
      },
    }
  }
  jestInlineStyle={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#e0e0e0",
        "borderRadius": 10,
        "height": "100%",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "30%",
      },
      {
        "backgroundColor": "green",
      },
    ]
  }
  nativeID="3"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#e0e0e0",
        "borderRadius": 10,
        "height": "100%",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "30%",
      },
      {
        "backgroundColor": "green",
      },
      {
        "transform": [
          {
            "translateX": 0,
          },
        ],
      },
    ]
  }
>
  <Text
    accessibilityLabel="This is a tile on column 2 and row 2. It is labeled X."
    accessible={true}
    style={
      [
        {
          "color": "#11181C",
        },
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        {
          "color": "#ffffff",
          "fontSize": 32,
          "fontWeight": "bold",
          "lineHeight": 32,
        },
      ]
    }
  >
    X
  </Text>
</View>
`;
